--- a/science_restaurant/controllers/templates/restaurant/home.html
+++ b/science_restaurant/controllers/templates/restaurant/home.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home page</title>
-</head>
-<body>
+{% extends 'restaurant/base.html' %}
 
-</body>
-</html>
+{% block content %}
+<h1>{{title}}</h1>
+
+<ul>
+    {% for p in posts %}
+    <li>
+        <h2>{{p.nik_name}}</h2>
+        <p>{{p.about}}</p>
+        <hr>
+    </li>
+    {% endfor %}
+</ul>
+
+{% endblock %}
