--- a/science_restaurant/controllers/templates/restaurant/home.html
+++ b/science_restaurant/controllers/templates/restaurant/home.html
@@ -6,6 +6,7 @@
 <ul class="list-articles">
 	{% for p in posts %}
 			<li><h2>{{p.nik_name}}</h2>
+			<!-- Words Filters -->
             <p>{{p.about|linebreaks|truncatewords:50}}</p>
 	{% autoescape on %}
 	{{p.content|linebreaks|truncatewords:50}}
