--- a/science_restaurant/controllers/templates/restaurant/base.html
+++ b/science_restaurant/controllers/templates/restaurant/base.html
@@ -34,9 +34,9 @@
 	<td valign="top" class="left-chapters">
 	<ul id="leftchapters">
 		<li class="selected">Все категории</li>
-		<li><a href="#">Актрисы</a></li>
-		<li><a href="#">Певицы</a></li>
-		<li><a href="#">Спортсменки</a></li>
+		<li><a href="#">Развлечение</a></li>
+		<li><a href="#">Меню</a></li>
+		<li><a href="#">Допольнительные</a></li>
 		<li class="share">
 		<p>Наш канал</p>
 		<a class="share-yt" href="https://www.youtube.com/watch?v=bYCKVp-HJg4&list=PLs8c_Ytyvy5POrPUiXDn80jvIVmnFbzbh&ab_channel=VDK45" target="_blank" rel="nofollow"></a>
