--- a/science_restaurant/controllers/templates/restaurant/home.html
+++ b/science_restaurant/controllers/templates/restaurant/home.html
@@ -8,6 +8,7 @@
 			<li><h2>{{p.nik_name}}</h2>
 			<!-- Words Filters -->
             <p>{{p.about|linebreaks|truncatewords:100}}</p>
+	<!-- Экранирование -->
 	{% autoescape on %}
 	{{p.content|linebreaks|truncatewords:50}}
 	{% endautoescape %}
