--- a/science_restaurant/controllers/templates/restaurant/home.html
+++ b/science_restaurant/controllers/templates/restaurant/home.html
@@ -13,7 +13,7 @@
 	{{p.content|linebreaks|truncatewords:50}}
 	{% endautoescape %}
 			<div class="clear"></div>
-			<p class="link-read-post"><a href="#">Читать пост</a></p>
+			<p class="link-read-post"><a href="{% url 'news' p.pk %}">Читать пост</a></p>
 			</li>
 	{% endfor %}
 </ul>
