Data Base new table category

--- a/science_restaurant/controllers/templates/restaurant/base.html
+++ b/science_restaurant/controllers/templates/restaurant/base.html
@@ -36,8 +36,8 @@
 	<td valign="top" class="left-chapters">
 	<ul id="leftchapters">
 		<li class="selected">Categories:</li>
-		<li><a href="{% url 'food_menu' %}">Food menu</a></li>
-		<li><a href="{% url 'games' %}">Games</a></li>
+		<li><a href="{% url 'actors' %}">Actors</a></li>
+		<li><a href="{% url 'billionaires' %}">Billionaires</a></li>
 		<li><a href="{% url 'others' %}">Others</a></li>
 		<li class="share">
 		<p>Chanel on Youtube:</p>
