Data Base ADD new table category

--- a/science_restaurant/controllers/templates/restaurant/base.html
+++ b/science_restaurant/controllers/templates/restaurant/base.html
@@ -35,10 +35,24 @@
 <!-- Sidebar слева -->
 	<td valign="top" class="left-chapters">
 	<ul id="leftchapters">
-		<li class="selected">Categories:</li>
-		<li><a href="{% url 'actors' %}">Actors</a></li>
-		<li><a href="{% url 'billionaires' %}">Billionaires</a></li>
-		<li><a href="{% url 'others' %}">Others</a></li>
+<!--		<li class="selected">Categories:</li>-->
+<!--		<li><a href="{% url 'actors' %}">Actors</a></li>-->
+<!--		<li><a href="{% url 'billionaires' %}">Billionaires</a></li>-->
+<!--		<li><a href="{% url 'others' %}">Others</a></li>-->
+		{% if cat_selected == 0 %}
+			<li class="selected">Все категории</li>
+		{% else %}
+			<li><a href="{% url 'home' %}">Все категории</a></li>
+		{% endif %}
+
+		{% for c in cats %}
+			{% if c.pk == cat_selected %}
+				<li class="selected">{{c.name}}</li>
+			{% else %}
+				<li><a href="{{ c.get_absolute_url }}">{{c.name}}</a></li>
+			{% endif %}
+		{% endfor %}
+
 		<li class="share">
 		<p>Chanel on Youtube:</p>
 		<a class="share-yt" href="https://www.youtube.com/watch?v=bYCKVp-HJg4&list=PLs8c_Ytyvy5POrPUiXDn80jvIVmnFbzbh&ab_channel=VDK45" target="_blank" rel="nofollow"></a>
