--- a/science_restaurant/controllers/templates/restaurant/home.html
+++ b/science_restaurant/controllers/templates/restaurant/home.html
@@ -5,7 +5,12 @@
 {% block content %}
 <ul class="list-articles">
 	{% for p in posts %}
-			<li><h2>{{p.nik_name}}</h2>
+			<li><div class="article-panel">
+	<p class="first">Категория: {{p.cat}}</p>
+	<p class="last">Дата: {{p.time_update|date:"d-m-Y H:i:s"}}</p>
+</div>
+
+				<h2>{{p.nik_name}}</h2>
 			<!-- Words Filters -->
             <p>{{p.about|linebreaks|truncatewords:100}}</p>
 	<!-- Экранирование -->
