--- a/science_restaurant/controllers/templates/restaurant/home.html
+++ b/science_restaurant/controllers/templates/restaurant/home.html
@@ -8,7 +8,10 @@
 			<li><div class="article-panel">
 	<p class="first">Категория: {{p.cat}}</p>
 	<p class="last">Дата: {{p.time_update|date:"d-m-Y H:i:s"}}</p>
-</div>
+				</div>
+	{% if p.photo %}
+	<p><img class="img-article-left thumb" src="{{p.photo.url}}"></p>
+	{% endif %}
 
 				<h2>{{p.nik_name}}</h2>
 			<!-- Words Filters -->
