--- a/science_restaurant/controllers/templates/restaurant/base.html
+++ b/science_restaurant/controllers/templates/restaurant/base.html
@@ -16,7 +16,7 @@
 {% block mainmenu %}
 		<div class="header">
 			<ul id="mainmenu" class="mainmenu">
-			<li class="logo"><a href="{% url 'main' %}"><div class="logo"></div></a></li>
+			<li class="logo"><a href="{% url 'home' %}"><div class="logo"></div></a></li>
 {% for m in menu %}
 	{% if not forloop.last %}
 			<!-- Tag URL -->
