--- a/science_restaurant/controllers/templates/restaurant/add_news.html
+++ b/science_restaurant/controllers/templates/restaurant/add_news.html
@@ -2,5 +2,19 @@
 
 {% block content %}
 <h1>{{title}}</h1>
-<p>О нас</p>
+
+<form action="{% url 'add_news' %}" method="post">
+{% csrf_token %}
+
+    <div class="form-error">{{ form.non_field_errors }}</div>
+
+{% for f in form %}
+<p><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
+<div class="form-error">{{ f.errors }}</div>
+{% endfor %}
+
+    <button type="submit">Добавить</button>
+</form>
+
 {% endblock %}
+
