Added left menu in contact, login

--- a/science_restaurant/controllers/templates/restaurant/login.html
+++ b/science_restaurant/controllers/templates/restaurant/login.html
@@ -1,7 +1,6 @@
 {% extends 'restaurant/base.html' %}
 
 {% block content %}
-<ul class="list-articles">
-	<h2> LOGIN</h2>
-</ul>
+<h1>{{title}}</h1>
+<p>Login</p>
 {% endblock %}
