--- a/science_restaurant/controllers/templates/restaurant/login.html
+++ b/science_restaurant/controllers/templates/restaurant/login.html
@@ -1,6 +1,7 @@
 {% extends 'restaurant/base.html' %}
 
 {% block content %}
-<h1>{{title}}</h1>
-<p>Login</p>
+<ul class="list-articles">
+	<h2> LOGIN</h2>
+</ul>
 {% endblock %}
