--- a/science_restaurant/controllers/templates/restaurant/base.html
+++ b/science_restaurant/controllers/templates/restaurant/base.html
@@ -18,14 +18,12 @@
 			<ul id="mainmenu" class="mainmenu">
 			<li class="logo"><a href="{% url 'home' %}"><div class="logo"></div></a></li>
 {% for m in menu %}
-	{% if not forloop.last %}
 			<!-- Tag URL -->
 			<li><a href="{% url m.url_name %}">{{m.title}}</a></li>
-	{% else %}
-			<!-- Tag URL -->
-			<li class="last"><a href="{% url m.url_name %}">{{m.title}}</a></li>
-	{% endif %}
+
 {% endfor %}
+<!-- Login -->
+			<li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Войти</a></li>
 			</ul>
 			<div class="clear"></div>
 		</div>
