--- a/science_restaurant/controllers/templates/restaurant/base.html
+++ b/science_restaurant/controllers/templates/restaurant/base.html
@@ -23,7 +23,12 @@
 
 {% endfor %}
 <!-- Login -->
-			<li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Войти</a></li>
+			<!--	скрыть/отобразить регистрацию и войти 		-->
+			{% if request.user.is_authenticated %}
+				<li class="last"> {{user.username}} | <a href="{% url 'logout' %}">Выйти</a></li>
+				{% else %}
+				<li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Войти</a></li>
+				{% endif %}
 			</ul>
 			<div class="clear"></div>
 		</div>
