--- a/science_restaurant/controllers/templates/restaurant/login.html
+++ b/science_restaurant/controllers/templates/restaurant/login.html
@@ -1,7 +1,19 @@
 {% extends 'restaurant/base.html' %}
 
 {% block content %}
-<ul class="list-articles">
-	<h2> LOGIN</h2>
-</ul>
+<h1>{{title}}</h1>
+
+<form method="post">
+    {% csrf_token %}
+
+    <div class="form-error">{{ form.non_field_errors }}</div>
+
+    {% for f in form %}
+    <p><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
+    <div class="form-error">{{ f.errors }}</div>
+    {% endfor %}
+
+    <button type="submit">Войти</button>
+</form>
+
 {% endblock %}
