--- a/science_restaurant/controllers/templates/restaurant/base.html
+++ b/science_restaurant/controllers/templates/restaurant/base.html
@@ -1,5 +1,7 @@
 {% load static %}
 {% load controllers_tags %}
+{% load cache %}
+
 
 <!DOCTYPE html>
 <html>
@@ -38,20 +40,20 @@
 <table class="table-content" border=0 cellpadding="0" cellspacing="0">
 <tr>
 <!-- Sidebar слева -->
+<td valign="top" class="left-chapters">
+<ul id="leftchapters">
 
-	<td valign="top" class="left-chapters">
+<!--	Кэш sidebar	  -->
+{% cache 60 sidebar %}
+	{% if cat_selected == 0 %}
+		<li class="selected">Все категории</li>
+	{% else %}
+		<li><a href="{% url 'home' %}">Все категории</a></li>
+	{% endif %}
 
-
-	<ul id="leftchapters">
-		{% if cat_selected == 0 %}
-			<li class="selected">Все категории</li>
-		{% else %}
-			<li><a href="{% url 'home' %}">Все категории</a></li>
-		{% endif %}
-
-<!--		{% show_categories 'name' cat_selected %}-->
-{% for c in cats %}
-<!--	Если есть запись	-->
+	<!--		{% show_categories 'name' cat_selected %}-->
+	{% for c in cats %}
+	<!--	Если есть запись	-->
 	{% if c.visitor__count > 0 %}
 		{% if c.pk == cat_selected %}
 		<li class="selected">{{c.name}}</li>
@@ -59,8 +61,8 @@
 		<li><a href="{{ c.get_absolute_url }}">{{c.name}}</a></li>
 		{% endif %}
 	{% endif %}
-
 {% endfor %}
+{% endcache %}
 
 		<li class="share">
 		<p>Chanel on Youtube:</p>
